<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main"
    tools:context=".Settings">



    <View
        android:id="@+id/rectangle_1"
        android:layout_width="match_parent"
        android:layout_height="359dp"
        android:layout_marginTop="-100dp"
        android:background="@drawable/home_bg"
        tools:ignore="VisualLintBounds" />

    <TextView
        android:id="@+id/edit_profile"
        android:layout_width="80dp"
        android:layout_height="25dp"
        android:layout_gravity="center_horizontal|center"
        android:layout_marginLeft="309dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/hamhlet"
        android:gravity="center"
        android:text="@string/edit_profile_string"
        android:textColor="@color/sightings_color"
        android:textSize="12sp"
        android:textStyle="bold"
        tools:ignore="RtlHardcoded,TextSizeCheck" />
    <View
        android:id="@+id/ellipse_7"
        android:layout_width="138dp"
        android:layout_height="137dp"
        android:layout_marginStart="140dp"
        android:layout_marginTop="65dp"
        android:background="@drawable/ellipse_7_shape" />

    <ImageView
        android:id="@+id/ellipse_8"
        android:layout_width="138dp"
        android:layout_height="131dp"
        android:layout_marginStart="140dp"
        android:layout_marginTop="68dp"
        android:src="@drawable/ellipse_8"
        tools:ignore="ContentDescription" />


    <TextView
        android:id="@+id/sightings"
        android:layout_width="67dp"
        android:layout_height="25.5dp"
        android:layout_gravity="center_horizontal|center"
        android:layout_marginLeft="95dp"
        android:layout_marginTop="214dp"
        android:fontFamily="@font/habibi"
        android:gravity="center"
        android:text="@string/sightings_string"
        android:textColor="@color/sightings_color"
        android:textSize="13sp"
        tools:ignore="RtlHardcoded,TextSizeCheck" />

    <TextView
        android:id="@+id/A5"
        android:layout_width="19dp"
        android:layout_height="25dp"
        android:layout_gravity="center_horizontal|center"
        android:layout_marginLeft="117dp"
        android:layout_marginTop="194dp"
        android:fontFamily="@font/hamhlet"
        android:gravity="center"
        android:text="@string/A5"
        android:textColor="@color/sightings_color"
        android:textSize="12sp"
        android:textStyle="bold"
        tools:ignore="RtlHardcoded,TextSizeCheck" />


    <TextView
        android:id="@+id/birds_seen"
        android:layout_width="75dp"
        android:layout_height="25.5dp"
        android:layout_gravity="center_horizontal|center"
        android:layout_marginLeft="249dp"
        android:layout_marginTop="214dp"
        android:fontFamily="@font/habibi"
        android:gravity="center"
        android:text="@string/birds_seen_string"
        android:textColor="@color/sightings_color"
        android:textSize="13sp"
        tools:ignore="RtlHardcoded,TextSizeCheck" />

    <TextView
        android:id="@+id/A11"
        android:layout_width="24dp"
        android:layout_height="25dp"
        android:layout_gravity="center_horizontal|center"
        android:layout_marginLeft="275dp"
        android:layout_marginTop="194dp"
        android:fontFamily="@font/hamhlet"
        android:gravity="center"
        android:text="@string/A11"
        android:textColor="@color/sightings_color"
        android:textSize="12sp"
        android:textStyle="bold"
        tools:ignore="RtlHardcoded,TextSizeCheck" />


    <TextView
        android:id="@+id/settings_ek3"
        android:layout_width="106dp"
        android:layout_height="38dp"
        android:layout_marginLeft="26dp"
        android:layout_marginTop="285dp"
        android:fontFamily="@font/inter_bold"
        android:text="@string/settings_ek3_string"
        android:textColor="@color/settings_ek3_color"
        android:textSize="20sp"
        android:textStyle="bold"
        tools:ignore="RtlHardcoded,TextSizeCheck" />

    <TextView
        android:layout_width="90.5dp"
        android:layout_height="28.5dp"
        android:layout_marginLeft="26dp"
        android:layout_marginTop="345dp"
        android:fontFamily="@font/inter_regular"
        android:text="@string/full_name_string"
        android:textColor="@color/settings_ek3_color"
        android:textSize="15sp"
        tools:ignore="RtlHardcoded,TextSizeCheck" />

    <TextView
        android:id="@+id/full_name"
        android:layout_width="141.5dp"
        android:layout_height="28.5dp"
        android:layout_marginLeft="259dp"
        android:layout_marginTop="345dp"
        android:fontFamily="@font/inter_regular"
        android:text="@string/sarah_thompson_string"
        android:textColor="@color/settings_ek3_color"
        android:textSize="15sp"
        tools:ignore="RtlHardcoded,TextSizeCheck" />

    <TextView
        android:layout_width="65.5dp"
        android:layout_height="28.5dp"
        android:layout_marginLeft="26dp"
        android:layout_marginTop="405dp"
        android:fontFamily="@font/inter_regular"
        android:text="@string/e_mail_string"
        android:textColor="@color/settings_ek3_color"
        android:textSize="15sp"
        tools:ignore="RtlHardcoded,TextSizeCheck" />

    <TextView
        android:id="@+id/email"
        android:layout_width="217.5dp"
        android:layout_height="28.5dp"
        android:layout_marginLeft="199dp"
        android:layout_marginTop="405dp"
        android:fontFamily="@font/inter_regular"
        android:text="@string/sarahthompson_gmail_com_string"
        android:textColor="@color/settings_ek3_color"
        android:textSize="15sp"
        tools:ignore="RtlHardcoded,TextSizeCheck" />

    <TextView
        android:id="@+id/metric_system"
        android:layout_width="123.5dp"
        android:layout_height="28.5dp"
        android:layout_marginLeft="26dp"
        android:layout_marginTop="465dp"
        android:fontFamily="@font/inter_regular"
        android:text="@string/metric_system_string"
        android:textColor="@color/settings_ek3_color"
        android:textSize="15sp"
        tools:ignore="RtlHardcoded,TextSizeCheck" />


    <Spinner
        android:id="@+id/unitSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="236dp"
        android:layout_marginTop="460dp"
        android:background="@color/get_started__color"
        android:enabled="false"
        android:minHeight="48dp"
        android:textColor="@color/get_started__color"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/notifications_ek1"
        android:layout_width="110.5dp"
        android:layout_height="28.5dp"
        android:layout_marginLeft="26dp"
        android:layout_marginTop="525dp"
        android:fontFamily="@font/inter_regular"
        android:text="@string/notifications_ek1_string"
        android:textColor="@color/settings_ek3_color"
        android:textSize="15sp"
        tools:ignore="RtlHardcoded,TextSizeCheck" />

    <Switch
        android:id="@+id/notificationSwitch"
        android:layout_width="110.5dp"
        android:layout_height="28.5dp"
        android:layout_marginLeft="266dp"
        android:layout_marginTop="525dp"
        android:background="@drawable/home_bg"
        tools:ignore="RtlHardcoded,TouchTargetSizeCheck,UseSwitchCompatOrMaterialXml" />

    <TextView
        android:id="@+id/dragSliderTextView"
        android:layout_width="248dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/hamhlet"
        android:text="Drag slider to filter bird hotspots by distance"
        android:textColor="@color/white"
        android:textSize="30px"
        android:textStyle="bold"
        tools:ignore="HardcodedText,TextSizeCheck" />

    <SeekBar
        android:id="@+id/distanceSeekBar"
        android:layout_width="134dp"
        android:layout_height="40dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="35dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/get_started_bg" />
    <TextView
        android:id="@+id/distanceTextView"
        android:layout_width="109dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="80dp"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/hamhlet"
        android:text="Distance: 0 km"
        android:textColor="@color/white"
        android:textSize="30px"
        android:textStyle="bold"
        tools:ignore="HardcodedText,TextSizeCheck" />

    <Button
        android:id="@+id/logoutBtn"
        android:layout_width="302dp"
        android:layout_height="32dp"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="605dp"
        android:background="@drawable/rectangle_22_shape"
        android:fontFamily="@font/inter_regular"
        android:text="@string/logout_string"
        android:textColor="@color/logout_color"
        android:textSize="15dp"
        android:textStyle="bold"
        tools:ignore="RtlHardcoded,SpUsage,TextSizeCheck,TouchTargetSizeCheck" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigationView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        app:menu="@menu/bottom_nav_menu"
        android:padding="10dp"
        app:itemIconTint="@drawable/bottom_nav"
        app:itemTextColor="@drawable/bottom_nav"
        android:background="@drawable/nav_border"
        tools:ignore="VisualLintBottomNav" />

</RelativeLayout>